Fix overflow of view recently featured charities

--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -22,7 +22,7 @@
 }
 
 .recently_featured_link {
-  padding-right: 4%;
+  margin-right: 4%;
   padding-top: 0.8em;
   text-align: right;
 }
